se agrega datos a pag Resumen

--- a/pages/Resumen.html
+++ b/pages/Resumen.html
@@ -43,19 +43,19 @@
             <h2>Datos Personales:</h2>
         
             <label for="Nombre">Nombre</label>            
-            <input class="controls" type="text" name="Nombre" id="Nombre" placeholder="">
+            <input class="controls" type="text" name="Nombre" id="Nombre" placeholder="Gimena">
 
             <label for="Apellido">Apellido</label>
-            <input class="controls" type="text" name="Apellido" id="Apellido" placeholder="">
+            <input class="controls" type="text" name="Apellido" id="Apellido" placeholder="Martinez">
 
             <label for="Direccion">Direccion</label>
-            <input class="controls" type="text" name="Direccion" id="Direccion" placeholder="">
+            <input class="controls" type="text" name="Direccion" id="Direccion" placeholder="154 n5632 La Plata">
 
             <label for="Telefono">Telefono</label>            
-            <input class="controls" type="Telefono" name="Telefono" id="Telefono" placeholder="">
+            <input class="controls" type="Telefono" name="Telefono" id="Telefono" placeholder="1156892456">
 
             <label for="Correo">Email</label>            
-            <input class="controls" type="Email" name="Email" id="Email" placeholder="">
+            <input class="controls" type="Email" name="Email" id="Email" placeholder="gime_martinez@gmail.com">
         </div>
 
         <div class="ReservaExitosa">
