--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -37,6 +37,7 @@
 
 <body>
   <!-- primera pagina -->
+  <main>
     <div class="tab1" id="paso1">
         <h1>Con el fin de brindar una rápida respuesta y solución a nuestros clientes, le haremos algunas preguntas y le pediremos algunos datos:</h1>
         <fieldset class="Pres">
@@ -102,7 +103,7 @@
       </div>
 <!-- tercera pagina -->
       <div class="tab3" id="paso3">
-        <h1>Le agradecemos por confiar en “DevSRum¨ y en este equipo que estará a su disposición para la realización de sus proyectos.  </h1>
+        <h1>Le agradecemos por confiar en “DevScrum¨ y en este equipo, que estará a su disposición para la realización de sus proyectos.</h1>
        <div class="text">
         <legend>Su solicitud se ha registrado con éxito. A la brevedad, nos estaremos poniendo en contacto.</legend>
        </div>
@@ -111,9 +112,8 @@
         <button class="btnEnviar" onclick="submitForm()">Enviar</button>
       </div>
 
-      <script src="./FormScript.js"></script>
-</body>
-    <main></main>
+
+    </main>
 <footer>
       <div class="redesSociales">
       <div class="iconos">
@@ -129,5 +129,6 @@
       <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
       <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
 </footer>
-
+<script src="./FormScript.js"></script>
+</body>
 </html> 
