--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -13,27 +13,28 @@
 </head>
 
 <header>
-    <nav>
+  <nav>
       <div class="encabezadoFijo">
-      <div class="logo">
-          <a href="./index.html">
-            <img class="favicon" src="./img/favicon.svg" alt="Icono">
+          <div class="logo">
+              <a href="./index.html">
+              <img class="favicon" src="./img/favicon.svg" alt="Icono">
               <h2 >DevScrum</h2>
           </a>
-        </div>
+          </div>
+
           <div class="enlaces">
               <a class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
-              <a href="./index.html#nosotros">NOSOTROS</a>
-              <a href="./index.html#soluciones">SOLUCIONES</a>
-              <a href="./index.html#oficinas">OFICINAS</a>
+              <a href="#nosotros">NOSOTROS</a>
+              <a href="#soluciones">SOLUCIONES</a>
+              <a href="#oficinas">OFICINAS</a>
               <a class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
           </div>
-            <button class="btn-menu">
-                <i class="bi bi-list"></i>
-              </button>
-        </div>
-    </nav>
-  </header>
+          <button class="btn-menu">
+              <i class="bi bi-list"></i>
+          </button>
+      </div>
+  </nav>
+</header>
 
 <body>
   <!-- primera pagina -->
@@ -111,9 +112,8 @@
         <button class="btnAnterior" onclick="prevStep()">Anterior</button>
         <button class="btnEnviar" onclick="submitForm()">Enviar</button>
       </div>
+</main>
 
-
-    </main>
 <footer>
       <div class="redesSociales">
       <div class="iconos">
@@ -129,6 +129,8 @@
       <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
       <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
 </footer>
-<script src="./FormScript.js"></script>
+
+  <script src="./FormScript.js"></script>
+
 </body>
 </html> 
