Se agrega lógica al menú de hamburguesa del index y portfolios, se modifica JSON, se agrega como segunda solución al trabajo de las barras de navegación.

--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
                         <h2 >DevScrum</h2>
                     </a>
                     </div>
-
-                    <div class="enlaces">
-                        <a class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
-                        <a href="#nosotros">NOSOTROS</a>
-                        <a href="#soluciones">SOLUCIONES</a>
-                        <a href="#oficinas">OFICINAS</a>
-                        <a class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
+                    <div class="enlaces enlacesVisibles enlacesMenu" id="enlaces">
+                        <a id="btn-contacto" class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
+                        <a id="btn-nosotros" href="#nosotros">NOSOTROS</a>
+                        <a id="btn-soluciones" href="#soluciones">SOLUCIONES</a>
+                        <a id="btn-oficinas" href="#oficinas">OFICINAS</a>
+                        <a id="btn-reunion" class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
                     </div>
-                    <button class="btn-menu">
+                    <button class="btn-menu" id="btn-menu">
                         <i class="bi bi-list"></i>
                     </button>
                 </div>
@@ -107,20 +106,20 @@
             </div>
 
             <div class="colaborador2">
-                <a class="sobresalir" href="">
+                <a class="sobresalir" href="https://yairgaston.github.io/NavBars_Proyect/" target="_blank">
                 <div class="imgSolucion2"></div>
             </a>
-            <span class="nombreSolucion">Registro de usuarios</span>
-            <p class="descripcionSolucion">Plataforma de registro de usuarios, donde podrás ingresar todos sus datos. </p>
-            <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
+            <span class="nombreSolucion">Minimal NavBars</span>
+            <p class="descripcionSolucion">Barras de navegación para tu sitio web. </p>
+            <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css</p>
             </div>
 
             <div class="colaborador3">
                 <a class="sobresalir" href="">
                 <div class="imgSolucion3"></div>
             </a>
-            <span class="nombreSolucion">Registro de usuarios</span>
-            <p class="descripcionSolucion">Plataforma de registro de usuarios, donde podrás ingresar todos sus datos. </p>
+            <span class="nombreSolucion">CRM logístico</span>
+            <p class="descripcionSolucion">Completo sistema CRM para la gestión integrada de las distintas dependencias de su empresa logística. </p>
             <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
             </div>
         </div>
