--- a/pages/portfolioJesica.html
+++ b/pages/portfolioJesica.html
@@ -23,14 +23,14 @@
                         <h2 >DevScrum</h2>
                     </a>
                     </div>
-                    <div class="enlaces">
-                        <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
-                        <a href="../index.html#nosotros">NOSOTROS</a>
-                        <a href="../index.html#soluciones">SOLUCIONES</a>
-                        <a href="../index.html#oficinas">OFICINAS</a>
-                        <a class="textoNegrita" href="../FormCompleto.html">SOLICITAR REUNIÓN</a>
+                    <div class="enlaces enlacesVisibles enlacesMenu" id="enlaces">
+                        <a id="btn-contacto" class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
+                        <a id="btn-nosotros" href="../index.html#nosotros">NOSOTROS</a>
+                        <a id="btn-soluciones" href="../index.html#soluciones">SOLUCIONES</a>
+                        <a id="btn-oficinas" href="../index.html#oficinas">OFICINAS</a>
+                        <a id="btn-reunion" class="textoNegrita" href="../FormCompleto.html">SOLICITAR REUNIÓN</a>
                     </div>
-                    <button class="btn-menu">
+                    <button class="btn-menu" id="btn-menu">
                         <i class="bi bi-list"></i>
                     </button>
                 </div>
